Decrease allocations from listing the layers
Signed-off-by: Taylor Smock <tsmock@meta.com>